--- a/ll-baseball-card.css
+++ b/ll-baseball-card.css
@@ -14,5 +14,13 @@
 
 img {
     width: 100%;
-    width: 100%;
+}
+
+ll-cog {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    left: calc(50% - 20px);
+    top: calc(50% - 20px);
+    z-index: 10;
 }
